--- a/src/main/resources/configs.properties
+++ b/src/main/resources/configs.properties
@@ -1,24 +1,30 @@
-# --- System Configurations ---
-browser=chrome
-url=https://hasaki.vn/
-address_url=https://hasaki.vn/customer/address/index
-headless=false
+# GLOBAL APPLICATION SETTINGS
+    browser=chrome
+    url=https://hasaki.vn/
+    address_url=https://hasaki.vn/customer/address/index
 
-# --- Wait Timeouts (Seconds) ---
-timeout=10
+# BROWSER CONFIGURATION
+    # Options: chrome, edge
+    browser.headless=false
+    browser.incognito=false
+    browser.maximize=true
+    browser.window.size=1920,1080
 
-# --- Intervals (Milliseconds) ---
-refreshInterval=500
+# DYNAMIC WAIT & TIMEOUTS (Seconds)
+    # Explicit wait for elementsa
+        timeout=10
+    # Polling interval for Fluent Wait (Milliseconds)
+        refreshInterval=500
 
-# --- Path Configurations ---
-screenshotPath=ScreenShots
-test-recordings=ScreenRecorder
-excelDataPath=src/main/resources/data/Data.xlsx
-driverPath=src/main/resources/drivers/
+# DATA & REPOSITORY PATHS
+    screenshotPath=ScreenShots
+    test-recordings=ScreenRecorder
+    excelDataPath=src/main/resources/data/Data.xlsx
+    driverPath=src/main/resources/drivers/
 
-# --- Default account ----
-username=topphanst@gmail.com
-password=topphan93
+# DEFAULT TEST ACCOUNT (Fallback Credentials)
+    username=topphanst@gmail.com
+    password=topphan93
 
 
 
