update github action

--- a/src/main/resources/configs.properties
+++ b/src/main/resources/configs.properties
@@ -5,7 +5,7 @@
 
 # BROWSER CONFIGURATION
     # Options: chrome, edge
-    browser.headless=true
+    browser.headless=false
     browser.incognito=false
     browser.maximize=true
     browser.window.size=1920,1080
