--- a/.github/workflows/E2E_Purchase.yml
+++ b/.github/workflows/E2E_Purchase.yml
@@ -34,7 +34,8 @@ jobs:
         # Đây là dòng lệnh quan trọng nhất để fix lỗi "Full HD" và "Logout"
         run: |
           xvfb-run --server-args="-screen 0 1920x1080x24" mvn test -DsuiteXmlFile=src/test/java/resources/master/Master_E2E_Purchase.xml
-       
+          continue-on-error: true
+
       - name: Upload Allure Report or Screenshots on Failure
         if: failure() # Chỉ chạy bước này nếu test bị Fail
         uses: actions/upload-artifact@v4
