update config file for off/online set driver

--- a/src/main/resources/configs.properties
+++ b/src/main/resources/configs.properties
@@ -8,6 +8,7 @@
     browser.headless=false
     browser.incognito=false
     browser.maximize=true
+    browser.offline=false
     browser.window.size=1920,1080
 
 # DYNAMIC WAIT & TIMEOUTS (Seconds)
