update config file for off/online set driver

--- a/src/main/resources/configs.properties
+++ b/src/main/resources/configs.properties
@@ -5,9 +5,9 @@
 
 # BROWSER CONFIGURATION
     # Options: chrome, edge
-    browser.headless=false
+    browser.headless=true
     browser.incognito=false
-    browser.maximize=true
+    browser.maximize=false
     browser.offline=false
     browser.window.size=1920,1080
 
