--- a/src/main/resources/configs.properties
+++ b/src/main/resources/configs.properties
@@ -5,7 +5,7 @@
 
 # BROWSER CONFIGURATION
     # Options: chrome, edge
-    browser.headless=false
+    browser.headless=true
     browser.incognito=false
     browser.maximize=false
     browser.offline=false
